valueof is cached