@@ -95,9 +95,9 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 
 	public void testAddEdge()
 	{
-		Integer node1 = new Integer(1);
-		Integer node2 = new Integer(2);
-		Integer node3 = new Integer(3);
+		Integer node1 = Integer.valueOf(1);
+		Integer node2 = Integer.valueOf(2);
+		Integer node3 = Integer.valueOf(3);
 		T edge = getLegalEdge(node1, node2);
 		T edge2 = getLegalEdge(node1, node3);
 		getStrategy().addGraphChangeListener(listener);
@@ -157,8 +157,8 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 
 	public void testClear()
 	{
-		Integer node1 = new Integer(1);
-		Integer node2 = new Integer(2);
+		Integer node1 = Integer.valueOf(1);
+		Integer node2 = Integer.valueOf(2);
 		T edge = getLegalEdge(node1, node2);
 		getStrategy().addGraphChangeListener(listener);
 		assertFalse(getStrategy().containsEdge(edge));
@@ -193,7 +193,7 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 
 	public void testContainsNode()
 	{
-		Integer node = new Integer(1);
+		Integer node = Integer.valueOf(1);
 		assertFalse(getStrategy().containsNode(node));
 		Integer node2 = new Integer(2);
 		assertFalse(getStrategy().containsNode(node2));
@@ -206,10 +206,10 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 
 	public void testContainsEdge()
 	{
-		Integer node1 = new Integer(1);
-		Integer node2 = new Integer(2);
+		Integer node1 = Integer.valueOf(1);
+		Integer node2 = Integer.valueOf(2);
 		T edge = getLegalEdge(node1, node2);
-		Integer node3 = new Integer(3);
+		Integer node3 = Integer.valueOf(3);
 		T edge2 = getLegalEdge(node1, node3);
 		assertFalse(getStrategy().containsEdge(edge));
 		assertFalse(getStrategy().containsEdge(edge2));
@@ -230,15 +230,15 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 		// transfer ownership: ensure I can modify without messing with
 		// strategy's list or vice versa
 		List<Integer> myList = getStrategy().getNodeList();
-		myList.add(new Integer(4));
+		myList.add(Integer.valueOf(4));
 		assertEquals(1, getStrategy().getNodeList().size());
 		assertEquals(2, myList.size());
 	}
 
 	public void testGetEdgeList()
 	{
-		Integer node1 = new Integer(1);
-		Integer node2 = new Integer(2);
+		Integer node1 = Integer.valueOf(1);
+		Integer node2 = Integer.valueOf(2);
 		T edge = getLegalEdge(node1, node2);
 		getStrategy().addNode(node1);
 		getStrategy().addNode(node2);
@@ -249,7 +249,7 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 		// transfer ownership: ensure I can modify without messing with
 		// strategy's list or vice versa
 		List<T> myList = getStrategy().getEdgeList();
-		myList.add(getLegalEdge(node1, new Integer(4)));
+		myList.add(getLegalEdge(node1, Integer.valueOf(4)));
 		assertEquals(1, getStrategy().getEdgeList().size());
 		assertEquals(2, myList.size());
 	}
@@ -257,7 +257,7 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 	public void testRemoveNode()
 	{
 		getStrategy().addGraphChangeListener(listener);
-		Integer node2 = new Integer(2);
+		Integer node2 = Integer.valueOf(2);
 		// not in there!
 		listener.lastRemoveNode = node2;
 		Integer node = new Integer(1);
@@ -316,9 +316,9 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 	public void testRemoveEdge()
 	{
 		getStrategy().addGraphChangeListener(listener);
-		Integer node1 = new Integer(1);
-		Integer node2 = new Integer(2);
-		Integer node3 = new Integer(3);
+		Integer node1 = Integer.valueOf(1);
+		Integer node2 = Integer.valueOf(2);
+		Integer node3 = Integer.valueOf(3);
 		T edge = getLegalEdge(node1, node2);
 		T edge2 = getLegalEdge(node2, node3);
 		T edge3 = getLegalEdge(node1, node3);
@@ -368,9 +368,9 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 
 	public void testGetAdjacentEdgeList()
 	{
-		Integer node1 = new Integer(1);
-		Integer node2 = new Integer(2);
-		Integer node3 = new Integer(3);
+		Integer node1 = Integer.valueOf(1);
+		Integer node2 = Integer.valueOf(2);
+		Integer node3 = Integer.valueOf(3);
 		T edge1 = getLegalEdge(node1, node2);
 		T edge2 = getLegalEdge(node2, node3);
 		T edge3 = getLegalEdge(node3, node1);
@@ -455,9 +455,9 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 
 	public void testEquals()
 	{
-		Integer node1 = new Integer(1);
-		Integer node3 = new Integer(3);
-		Integer node4 = new Integer(4);
+		Integer node1 = Integer.valueOf(1);
+		Integer node3 = Integer.valueOf(3);
+		Integer node4 = Integer.valueOf(4);
 		T edge1 = getLegalEdge(node1, node3);
 		T edge2 = getLegalEdge(node3, node4);
 		Graph<Integer, T> testGraph = getStrategy();
@@ -514,7 +514,7 @@ public abstract class AbstractGraphTestCase<T extends Edge<Integer>> extends
 		assertTrue(testGraph.addNode(node2));
 		assertFalse(testGraph.equals(master));
 		// Yes, NEW, not valueOf
-		assertTrue(master.addNode(new Integer(2)));
+		assertTrue(master.addNode(Integer.valueOf(2)));
 		// Test for .equals of the nodes
 		assertTrue(testGraph.equals(master));
 		assertEquals(testGraph.hashCode(), master.hashCode());
